--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "googleapis": "^73.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.10",
+    "node-schedule": "^2.0.0",
     "open": "^8.1.0"
   },
   "devDependencies": {
