--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "vue-click-outside": "^1.1.0",
     "vue-router": "^3.5.1",
     "vuetify": "^2.4.0",
+    "vuetify-datetime-picker": "^2.1.1",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
