--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "vue": "^2.6.11",
     "vue-click-outside": "^1.1.0",
     "vue-router": "^3.5.1",
+    "vue-videojs7": "^1.0.2",
     "vuelidate": "^0.7.6",
     "vuetify": "^2.4.0",
     "vuetify-datetime-picker": "^2.1.1",
