--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "vue-click-outside": "^1.1.0",
     "vue-router": "^3.5.1",
     "vue-videojs7": "^1.0.2",
+    "vue-youtube": "^1.4.0",
     "vuelidate": "^0.7.6",
     "vuetify": "^2.4.0",
     "vuetify-datetime-picker": "^2.1.1",
