--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "vue": "^2.6.11",
     "vue-click-outside": "^1.1.0",
