--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "googleapis": "^73.0.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.1",
     "mongoose": "^5.12.10",
     "node-schedule": "^2.0.0",
     "open": "^8.1.0"
